# ai-course

./: .gitignore  CV1_Lab1_Students.ipynb  CV1_Lab2.ipynb  CV1_Lab3_Students.ipynb  README.md  pyproject.toml  sc.ipynb
topics/1_intro_to_python/: 2022-09-28.ipynb  2022-10-03.ipynb  2022-10-05.ipynb  2022-10-06.ipynb  2022-10-11.ipynb  info.csv
topics/1_python_crash_course/: 2022-09-29.ipynb  2022-10-10.ipynb  2022-10-11.ipynb  2022-10-19.ipynb  2022-10-20.ipynb  2022-10-26.ipynb  2022-10-27.ipynb
topics/2_numpy/: 2022-11-07.ipynb  info.csv
topics/3_machine_learning/: 2022-11-16.ipynb  2022-11-21.ipynb  2022-11-23.ipynb  2022-11-23_2.ipynb  2022-11-28.ipynb  2022-11-30.ipynb  2022-12-07.ipynb  2022-12-12.ipynb  2022-12-14.ipynb  2022-12-19.ipynb  2022-12-21.ipynb  info.csv
topics/4_deep_learning/: 2022-04-12.ipynb  2023-01-11.ipynb  2023-01-16.ipynb  2023-01-23.ipynb  2023-01-25.ipynb  2023-01-30.ipynb  2023-02-01.ipynb  2023-02-08.ipynb  2023-02-20.ipynb  2023-02-27.ipynb  2023-03-03.ipynb  2023-03-06.ipynb  2023-03-13.ipynb  2023-03-15.ipynb  2023-03-15_2.ipynb  2023-03-16.ipynb  2023-04-12.ipynb  2023-04-25.ipynb  2023-04-26-2.ipynb  2023-04-26.ipynb  info.csv
topics/deep_learning/: 2022-04-12.ipynb  2023-01-11.ipynb  2023-01-16.ipynb  2023-01-23.ipynb  2023-01-25-qna.ipynb  2023-01-25.ipynb  2023-01-30.ipynb  2023-02-01.ipynb  2023-02-27.ipynb  2023-03-06.ipynb  2023-03-13.ipynb  2023-03-15.ipynb  2023-03-15_2.ipynb
topics/machine_learning/: 2022-11-14.ipynb  2022-11-21.ipynb  2022-11-28.ipynb  2022-12-07.ipynb  2022-12-07_2.ipynb  2022-12-12.ipynb  2022-12-14.ipynb  (+2 more)
(+32 files in other folders)
