[tool.poetry]
name = "simple-python-project"
version = "0.0.1"
description = "Simple Python project. Use it to check if your set up is complete."
authors = ["dqmis <dom.seputis@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
pandas = "1.5.0"
matplotlib = "^3.6.1"
pillow = "^9.2.0"
opencv-python = "^4.6.0.66"
mariadb = "^1.1.4"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
eli5 = "^0.13.0"
sklearn-pandas = "^2.2.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
cloudpickle = "^2.2.0"
wordcloud = "^1.8.2.2"
nltk = "^3.7"
selenium = "^4.7.2"
shap = "^0.41.0"
xgboost = "^1.7.2"
graphviz = "^0.20.1"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
safety = "^1.10.3"
mypy = "^0.971"
bandit = "^1.7.4"
isort = "^5.10.1"
nbqa = "^1.5.3"

jupyterlab = "^3.4.7"

[tool.flake8]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''
max_line_length = 99
max-complexity = 18

[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99
